# image-recognition

./: README.md
py-work/: README.md  pyproject.toml
py-work/recog/: README.md  pyproject.toml
py-work/recog/src/: code2-13to20.py  code2-1to12.py  code2-21to22.py  code3_13.py  code3_1to12.py  code4_1.py  code4_13.py  code4_21.py
py-work/recog/src/recog/: __init__.py  evaluate.py  transform.py  util.py  values.py
py-work/src/: code1_1.py  code2-14.py  gausian_filter.py
py-work/src/py_work/: __init__.py
